--- a/game-ttt/public/chess.html
+++ b/game-ttt/public/chess.html
@@ -14,16 +14,31 @@
   </script>
   <style>
     * { box-sizing: border-box; }
-    html { -webkit-text-size-adjust: 100%; touch-action: manipulation; height: 100%; }
+    html {
+      -webkit-text-size-adjust: 100%;
+      touch-action: manipulation;
+      width: 100%;
+      height: 100%;
+      margin: 0;
+      padding: 0;
+      background: #0f172a;
+    }
     body {
       font-family: 'Inter', system-ui, -apple-system, sans-serif;
       margin: 0;
+      padding: 0;
+      width: 100%;
       height: 100%;
-      min-height: 100vh;
-      min-height: 100dvh;
+      min-height: 100%;
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
       display: flex;
       flex-direction: column;
       align-items: stretch;
+      background: #0f172a;
       background: linear-gradient(160deg, #1e293b 0%, #0f172a 100%);
       -webkit-tap-highlight-color: transparent;
       -webkit-touch-callout: none;
@@ -51,6 +66,19 @@
     .status-card.game-over .status-text { color: #fbbf24; font-weight: 700; }
     .status-card.game-over.win .status-text { color: #34d399; }
     .status-card.game-over.lose .status-text { color: #f87171; }
+    .game-over-actions { display: flex; gap: 10px; justify-content: center; margin-top: 12px; flex-wrap: wrap; }
+    .game-over-actions.hidden { display: none !important; }
+    .btn-game-over {
+      padding: 10px 20px;
+      border-radius: 10px;
+      font-size: 0.95rem;
+      font-weight: 600;
+      border: none;
+      cursor: pointer;
+      font-family: inherit;
+    }
+    .btn-replay { background: #34d399; color: #0f172a; }
+    .btn-leave { background: rgba(255,255,255,0.2); color: #e2e8f0; border: 1px solid rgba(255,255,255,0.3); }
 
     .board-wrap {
       flex: 1;
@@ -60,6 +88,7 @@
       align-items: center;
       justify-content: center;
       padding: 0;
+      width: 100%;
     }
     .board {
       display: grid;
@@ -142,6 +171,10 @@
   <div id="statusCard" class="status-card">
     <div id="statusText" class="status-text">Connecting...</div>
     <div id="statusSub" class="status-sub"></div>
+    <div id="gameOverActions" class="game-over-actions hidden">
+      <button type="button" class="btn-game-over btn-replay">Replay</button>
+      <button type="button" class="btn-game-over btn-leave">Leave</button>
+    </div>
   </div>
   <div id="boardWrap" class="board-wrap hidden">
     <div id="board" class="board"></div>
@@ -157,9 +190,11 @@
     const boardWrap = document.getElementById('boardWrap');
     const boardEl = document.getElementById('board');
     let myColor = null;
+    let opponentName = 'Opponent';
     let state = { fen: '', turn: 'w', result: null, lastMove: null };
     let selected = null;
     let validMoves = [];
+    const gameOverActionsEl = document.getElementById('gameOverActions');
 
     // Professional chess piece images (Cburnett, Wikimedia Commons, CC BY-SA 3.0)
     const WIKI = 'https://commons.wikimedia.org/wiki/Special:FilePath';
@@ -253,15 +288,18 @@
       }
       if (state.result === 'draw') {
         setStatus("It's a draw!", '', 'game-over');
+        gameOverActionsEl.classList.remove('hidden');
       } else if (state.result) {
         if (state.result === myColor) setStatus('You win!', 'Well played.', 'game-over win');
-        else setStatus('You lose', "Opponent won.", 'game-over lose');
+        else setStatus('You lose', opponentName + ' won.', 'game-over lose');
+        gameOverActionsEl.classList.remove('hidden');
       } else {
+        gameOverActionsEl.classList.add('hidden');
         if (state.turn === myColor) {
           if (selected && validMoves.length) setStatus('Your turn', 'Tap a green square to move.', 'you-turn');
           else if (selected) setStatus('Your turn', 'Loading moves…', 'you-turn');
           else setStatus('Your turn', 'Tap a piece to see where it can move.', 'you-turn');
-        } else setStatus("Opponent's turn", 'Waiting for their move...', '');
+        } else setStatus(opponentName + "'s turn", 'Waiting for their move...', '');
       }
     }
 
@@ -334,6 +372,7 @@
 
     socket.on('start', (data) => {
       myColor = data.color;
+      opponentName = (data.opponent || 'Opponent').trim().slice(0, 30) || 'Opponent';
       boardWrap.classList.remove('hidden');
     });
 
@@ -353,6 +392,18 @@
 
     socket.on('roomFull', () => setStatus('Room full.', '', ''));
     socket.on('opponentLeft', () => setStatus('Opponent left.', 'You can go back.', ''));
+
+    document.getElementById('gameOverActions').addEventListener('click', (e) => {
+      if (e.target.classList.contains('btn-replay')) {
+        window.location.reload();
+      } else if (e.target.classList.contains('btn-leave')) {
+        if (window.ReactNativeWebView && typeof window.ReactNativeWebView.postMessage === 'function') {
+          window.ReactNativeWebView.postMessage(JSON.stringify({ type: 'leave' }));
+        } else {
+          window.close();
+        }
+      }
+    });
   </script>
 </body>
 </html>
