--- a/game-ttt/public/index.html
+++ b/game-ttt/public/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
   <title>Tic-Tac-Toe · Spill</title>
   <script src="/socket.io/socket.io.js"></script>
   <style>
     * { box-sizing: border-box; }
-    body { font-family: system-ui, sans-serif; margin: 0; min-height: 100vh; display: flex; flex-direction: column; align-items: center; justify-content: center; background: #f8fafc; padding: 16px; }
-    h1 { font-size: 1.5rem; color: #0f172a; margin-bottom: 8px; }
-    .status { color: #64748b; margin-bottom: 16px; text-align: center; }
+    html { -webkit-text-size-adjust: 100%; touch-action: manipulation; }
+    body { font-family: system-ui, sans-serif; margin: 0; min-height: 100vh; display: flex; flex-direction: column; align-items: center; justify-content: center; background: #f8fafc; padding: 12px 16px; -webkit-tap-highlight-color: transparent; -webkit-touch-callout: none; user-select: none; }
+    h1 { font-size: 1rem; font-weight: 600; color: #64748b; margin: 0 0 4px 0; }
+    .status { color: #64748b; margin-bottom: 12px; text-align: center; font-size: 0.9rem; }
     .board { display: grid; grid-template-columns: repeat(3, 1fr); gap: 8px; max-width: 280px; }
     .cell { width: 80px; height: 80px; border: 2px solid #e2e8f0; border-radius: 12px; background: #fff; font-size: 2rem; font-weight: 700; color: #0f172a; cursor: pointer; display: flex; align-items: center; justify-content: center; }
     .cell:hover:not(.filled) { background: #f1f5f9; border-color: #ec4899; }
@@ -20,11 +21,27 @@
     .winner { color: #10b981; font-weight: 700; }
     .draw { color: #64748b; }
     .hidden { display: none !important; }
+    .game-over-actions { display: flex; gap: 10px; justify-content: center; margin-top: 12px; flex-wrap: wrap; }
+    .game-over-actions.hidden { display: none !important; }
+    .btn-game-over {
+      padding: 10px 20px;
+      border-radius: 10px;
+      font-size: 0.95rem;
+      font-weight: 600;
+      border: none;
+      cursor: pointer;
+      font-family: inherit;
+    }
+    .btn-replay { background: #34d399; color: #0f172a; }
+    .btn-leave { background: #e2e8f0; color: #475569; }
   </style>
 </head>
 <body>
-  <h1>Tic-Tac-Toe</h1>
   <p id="status" class="status">Connecting...</p>
+  <div id="gameOverActions" class="game-over-actions hidden">
+    <button type="button" class="btn-game-over btn-replay">Replay</button>
+    <button type="button" class="btn-game-over btn-leave">Leave</button>
+  </div>
   <div id="board" class="board hidden">
     <button type="button" class="cell" data-i="0"></button>
     <button type="button" class="cell" data-i="1"></button>
@@ -43,7 +60,9 @@
     const roomCode = params.get('room') || '';
     const statusEl = document.getElementById('status');
     const boardEl = document.getElementById('board');
+    const gameOverActionsEl = document.getElementById('gameOverActions');
     let myRole = null;
+    let opponentName = 'Opponent';
     let state = { board: [], turn: 'X', winner: null };
 
     function setStatus(text, className = '') {
@@ -60,9 +79,16 @@
         cell.classList.toggle('o', v === 'O');
         cell.disabled = !!state.winner || state.turn !== myRole || !!v;
       });
-      if (state.winner === 'draw') setStatus("It's a draw!", 'draw');
-      else if (state.winner) setStatus(state.winner === myRole ? 'You win!' : 'You lose.', 'winner');
-      else setStatus(state.turn === myRole ? 'Your turn' : "Opponent's turn");
+      if (state.winner === 'draw') {
+        setStatus("It's a draw!", 'draw');
+        gameOverActionsEl.classList.remove('hidden');
+      } else if (state.winner) {
+        setStatus(state.winner === myRole ? 'You win!' : opponentName + ' won.', 'winner');
+        gameOverActionsEl.classList.remove('hidden');
+      } else {
+        gameOverActionsEl.classList.add('hidden');
+        setStatus(state.turn === myRole ? 'Your turn' : opponentName + "'s turn");
+      }
     }
 
     boardEl.querySelectorAll('.cell').forEach(cell => {
@@ -89,9 +115,10 @@
 
     socket.on('start', (data) => {
       myRole = data.role;
+      opponentName = (data.opponent || 'Opponent').trim().slice(0, 30) || 'Opponent';
       state = { board: Array(9).fill(''), turn: 'X', winner: null };
       boardEl.classList.remove('hidden');
-      setStatus(`You are ${myRole}. ${state.turn === myRole ? 'Your turn' : "Opponent's turn"}`);
+      setStatus(state.turn === myRole ? 'Your turn' : opponentName + "'s turn");
     });
 
     socket.on('state', (data) => {
@@ -101,6 +128,18 @@
 
     socket.on('roomFull', () => setStatus('This room is full.'));
     socket.on('opponentLeft', () => setStatus('Opponent left.', 'draw'));
+
+    gameOverActionsEl.addEventListener('click', (e) => {
+      if (e.target.classList.contains('btn-replay')) {
+        window.location.reload();
+      } else if (e.target.classList.contains('btn-leave')) {
+        if (window.ReactNativeWebView && typeof window.ReactNativeWebView.postMessage === 'function') {
+          window.ReactNativeWebView.postMessage(JSON.stringify({ type: 'leave' }));
+        } else {
+          window.close();
+        }
+      }
+    });
   </script>
 </body>
 </html>
