--- a/game-ttt/public/ludo.html
+++ b/game-ttt/public/ludo.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
   <title>Ludo · Spill</title>
   <script src="/socket.io/socket.io.js"></script>
   <style>
     * { box-sizing: border-box; }
-    body { font-family: system-ui, sans-serif; margin: 0; min-height: 100vh; display: flex; flex-direction: column; align-items: center; justify-content: center; background: #f8fafc; padding: 16px; }
-    h1 { font-size: 1.5rem; color: #0f172a; margin-bottom: 8px; }
-    .status { color: #64748b; margin-bottom: 12px; text-align: center; }
+    html { -webkit-text-size-adjust: 100%; touch-action: manipulation; }
+    body { font-family: system-ui, sans-serif; margin: 0; min-height: 100vh; display: flex; flex-direction: column; align-items: center; justify-content: center; background: #f8fafc; padding: 12px 16px; -webkit-tap-highlight-color: transparent; -webkit-touch-callout: none; }
+    .status { color: #64748b; margin-bottom: 10px; text-align: center; font-size: 0.9rem; }
     .track { display: flex; flex-wrap: wrap; gap: 4px; max-width: 320px; justify-content: center; }
     .cell { width: 28px; height: 28px; border-radius: 6px; background: #e2e8f0; display: flex; align-items: center; justify-content: center; font-size: 14px; font-weight: 700; }
     .cell.p0 { background: #ec4899; color: #fff; }
@@ -22,7 +22,6 @@
   </style>
 </head>
 <body>
-  <h1>Ludo</h1>
   <p id="status" class="status">Connecting...</p>
   <div id="game" class="hidden">
     <p id="dice" class="dice"></p>
